Fix wallpaper tear effect misalignment

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -65,6 +65,7 @@
   width: 100%;
   height: var(--margin-top);
   background: inherit; /* Copy background properties */
+  background-position: left bottom;
   transform: translateY(-100%);
   clip-path: polygon(0% 100%, 100% 100%, 100% 0%, 94% 14%, 91% 0%, 87% 14%, 82% 1%, 78% 12%, 78% 1%, 76% 11%, 74% 3%, 71% 12%, 70% 0%, 66% 14%, 65% 4%, 61% 24%, 58% 16%, 54% 20%, 53% 6%, 46% 18%, 43% 35%, 43% 12%, 37% 0%, 36% 25%, 31% 18%, 30% 8%, 27% 27%, 26% 34%, 20% 26%, 21% 11%, 16% 10%, 16% 35%, 10% 29%, 10% 16%, 6% 8%, 5% 43%, 2% 29%, 0% 0%);
 }
